<?xml version="1.0" encoding="utf-8"?>
<resources>
<!-- don't use ctrl + shift + f
	other wise there would be a fatal white space in singlePointXMl -->
    <string name="app_name">TraceRecoder</string>
    <!-- Address format -->
    <string name="address_output_string">%1$s %2$s %3$s</string>
    <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.7f, %2$.7f</string>
    <!-- Messages -->
    <string name="descriptionHint">description: </string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="gpsStatus">GPS状态 %1$d/%2$d</string>
    <string name="gpsStart">开始搜索GPS</string>
    <string name="gpsFixed">已连接</string>
    <string name="gpsFail">GPS 未开启</string>
    <string name="Camera">camera</string>
    <string name="Lat">经度\n %1$.6f</string>
    <string name="Lng">纬度\n %1$.6f</string>
    <string name="initialText">还等什么，开始旅行吧！</string>
    <string name="Start">开始记录</string>
    <string name="Save">保存记录</string>
    <string name="camera_title">相机</string>
    <string name="list_file_title">历史记录 </string>
    <string name="map_title">轨迹</string>
    <string name="new_record_title">控制中心</string>
    <string name="no_data">空记录</string>
    <string name="exit">退出</string>
    <string name="linePathXML">
<![CDATA[
        <Placemark>\n
        	<visibility>1</visibility>\n
        	<LineString>\n
        		<coordinates>\n
        			%1$s\n
        		</coordinates>\n
        	</LineString>\n
        </Placemark>\n
        ]]>
    </string>
    <string name="singlePointXML"><Data>
<![CDATA[
        <Placemark>\n
        	<visibility>1</visibility>\n
        	<Point>\n
        		<coordinates>\n
        			%1$s\n
        		</coordinates>\n
        	</Point>\n
        	<description>\n
        	<![CDATA[\n
        		<script>\n
        			data = %2$s\n
        		</script>\n
        		<body style=\"width: 65536px; height: 65536px;\">\n	
        			<iframe name=\"jsCall\" width=\"0\" height=\"0\" src=\"gallery.html\"></iframe>\n
        			<div id=\"wrapper\" style=\"width: 100%%; height: 100%%;\"></div>\n
        		</body>\n
        	]]]]><![CDATA[>\n
        	</description>\n
        </Placemark>\n
        ]]>
</Data></string>
    <string name="singlePointJson">{\"src\":\"%1$s\",\"desc\":\"%2$s\",\"time\":\"%3$s\"}</string>

</resources>