<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/etDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bOk"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/bCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bOk"
        android:layout_alignParentBottom="true"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/bOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bCancel"
        android:layout_alignLeft="@+id/etDesc"
        android:text="@string/ok" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etDesc"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/etDesc"
        android:text="@string/descriptionHint" />

</RelativeLayout>